[project]
name = "mead"
version = "0.1.0"
description = "MEAD: Modeling Environment for Analysis of Dynamics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
praxis = "mead.cli:cli"

[tool.hatch.build.targets.wheel]
include = [
    "mead/**/*",
    "pyproject.toml",
]

[tool.hatch.build.targets.sdist]
include = [
    "mead/**/*",
    "pyproject.toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
