[project]
name = "mead"
version = "0.1.3"
description = "MEAD: Modeling Environment for Analysis of Dynamics"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Marco Valtas", email = "mvaltas@marcovaltas.com" },
]
keywords = ["system dynamics", "modeling", "simulation", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]

[project.urls]
Homepage = "https://github.com/mvaltas/mead"
Repository = "https://github.com/mvaltas/mead"
# Documentation = "https://mead.readthedocs.io/" # Placeholder if documentation exists

# Optional dependencies for development/testing
[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
]

[tool.hatch.build.targets.wheel]
include = [
    "mead/**/*",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = [
    "mead/**/*",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
